resolve gap between image rows

--- a/index.css
+++ b/index.css
@@ -101,10 +101,15 @@ a {
 }
 
 .landingphoto {
+  height: 1000px;
   width: 100%;
-  height: 900px;
 }
 
+@media screen and (width <= 700px) {
+  .landingphoto {
+    height: 500px;
+  }
+}
 
 .desc {
   position: absolute;
@@ -123,19 +128,20 @@ a {
 
 .photogrid{
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-  gap: 1rem;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  gap: 2rem;
 }
 
 .photo {
   z-index: 1;
   opacity: 0.8;
   width: 100%;
-  height: 75%;
+  height: 600px;
   transform: scale(1);
   transition: opacity 800ms, transform 600ms;
   &:hover {
-    transform: scale(1.05);
+    transform: scale(1.3);
+		z-index: 2;
     opacity: 1;
     transition: transform 600ms, opacity 2000ms;
   }
